--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>TopSerials — Топ 10 зарубежных сериалов</title>
+  <meta charset="UTF-8" />
+  <title>TopSerials — Популярные сериалы (API)</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -41,27 +41,6 @@
       border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 16px;
-    }
-    .filters {
-      padding: 10px 20px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      background: #fff;
-      border-bottom: 1px solid #ddd;
-    }
-    .filters button {
-      background-color: #ddd;
-      border: none;
-      border-radius: 8px;
-      padding: 8px 14px;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-    .filters button:hover,
-    .filters button.active {
-      background-color: #333;
-      color: white;
     }
     .random-btn {
       text-align: center;
@@ -109,7 +88,7 @@
       font-weight: bold;
       margin-bottom: 8px;
     }
-    .genre, .rating {
+    .rating {
       font-size: 14px;
       color: #555;
       margin-bottom: 4px;
@@ -122,16 +101,14 @@
 </head>
 <body>
   <header>
-    <h1>TopSerials: Топ 10 зарубежных сериалов</h1>
-    <p>Подборка лучших сериалов, отобранных искусственным интеллектом</p>
+    <h1>TopSerials: Популярные зарубежные сериалы</h1>
+    <p>Данные загружаются с TMDB API</p>
     <button id="theme-toggle">🌙 Тёмная тема</button>
   </header>
 
   <div class="search-bar">
     <input type="text" id="search-input" placeholder="Поиск по названию...">
   </div>
-
-  <div class="filters" id="genre-filters"></div>
 
   <div class="random-btn">
     <button onclick="showRandomSerial()">🎲 Показать случайный сериал</button>
@@ -140,98 +117,34 @@
   <div class="container" id="serials-container"></div>
 
   <script>
-    const serials = [
-      {
-        title: "Очень странные дела",
-        genre: "Фантастика, Триллер",
-        rating: "8.7",
-        image: "https://upload.wikimedia.org/wikipedia/en/f/f7/Stranger_Things_season_4.jpg",
-        description: "Мистические события в городке, где дети сталкиваются с потусторонними силами."
-      },
-      {
-        title: "Во все тяжкие",
-        genre: "Драма, Криминал",
-        rating: "9.5",
-        image: "https://upload.wikimedia.org/wikipedia/en/6/61/Breaking_Bad_title_card.png",
-        description: "Химик превращается в наркобарона, чтобы обеспечить семью после диагноза рака."
-      },
-      {
-        title: "Игра престолов",
-        genre: "Фэнтези, Драма",
-        rating: "9.3",
-        image: "https://upload.wikimedia.org/wikipedia/en/d/d8/Game_of_Thrones_title_card.jpg",
-        description: "Борьба за Железный трон в фэнтезийном мире, где зима может длиться десятилетия."
-      },
-      {
-        title: "Шерлок",
-        genre: "Детектив, Драма",
-        rating: "9.1",
-        image: "https://upload.wikimedia.org/wikipedia/en/b/b9/Sherlock_titlecard.jpg",
-        description: "Современная адаптация классических историй о Шерлоке Холмсе."
-      },
-      {
-        title: "Черное зеркало",
-        genre: "Фантастика, Триллер",
-        rating: "8.8",
-        image: "https://upload.wikimedia.org/wikipedia/en/8/88/BlackMirrorTitleCard.jpg",
-        description: "Антология о технологиях будущего и их влиянии на общество."
-      },
-      {
-        title: "Корона",
-        genre: "Историческая драма",
-        rating: "8.6",
-        image: "https://upload.wikimedia.org/wikipedia/en/6/6e/The_Crown_title_card.jpg",
-        description: "История правления королевы Елизаветы II от молодости до зрелости."
-      },
-      {
-        title: "Мандалорец",
-        genre: "Фантастика, Приключения",
-        rating: "8.7",
-        image: "https://upload.wikimedia.org/wikipedia/en/6/6c/The_Mandalorian_season_2_poster.jpg",
-        description: "Наемник в галактике защищает загадочного малыша после падения Империи."
-      },
-      {
-        title: "Острые козырьки",
-        genre: "Криминал, Драма",
-        rating: "8.8",
-        image: "https://upload.wikimedia.org/wikipedia/en/e/e1/Peaky_Blinders_titlecard.jpg",
-        description: "Банда Пики Блайндерс борется за власть в Бирмингеме 20-х годов."
+    let serials = [];
+
+    async function fetchSerials() {
+      const url = "https://api.themoviedb.org/3/tv/popular?api_key=c607e213bf2a729a00ee06646c9d82dd&language=ru-RU&page=1";
+
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+
+        serials = data.results.map(show => ({
+          title: show.name,
+          rating: show.vote_average.toFixed(1),
+          image: show.poster_path
+            ? `https://image.tmdb.org/t/p/w500${show.poster_path}`
+            : "",
+          description: show.overview || "Описание отсутствует"
+        }));
+
+        renderSerials(serials);
+      } catch (error) {
+        console.error("Ошибка при загрузке сериалов:", error);
+        document.getElementById("serials-container").innerHTML = "<p>Ошибка загрузки данных.</p>";
       }
-    ];
+    }
 
     const container = document.getElementById("serials-container");
-    const filterBar = document.getElementById("genre-filters");
     const searchInput = document.getElementById("search-input");
     const toggleBtn = document.getElementById("theme-toggle");
-
-    function getUniqueGenres(serials) {
-      const allGenres = serials.flatMap(s => s.genre.split(',').map(g => g.trim()));
-      return [...new Set(allGenres)];
-    }
-
-    function renderFilters(genres) {
-      const allBtn = document.createElement("button");
-      allBtn.textContent = "Показать все";
-      allBtn.classList.add("active");
-      allBtn.addEventListener("click", () => {
-        document.querySelectorAll(".filters button").forEach(btn => btn.classList.remove("active"));
-        allBtn.classList.add("active");
-        renderSerials(serials);
-      });
-      filterBar.appendChild(allBtn);
-
-      genres.forEach(genre => {
-        const btn = document.createElement("button");
-        btn.textContent = genre;
-        btn.addEventListener("click", () => {
-          document.querySelectorAll(".filters button").forEach(b => b.classList.remove("active"));
-          btn.classList.add("active");
-          const filtered = serials.filter(s => s.genre.includes(genre));
-          renderSerials(filtered);
-        });
-        filterBar.appendChild(btn);
-      });
-    }
 
     function renderSerials(list) {
       const searchTerm = searchInput.value.toLowerCase();
@@ -244,7 +157,6 @@
           <img src="${s.image}" alt="${s.title}">
           <div class="card-content">
             <div class="title">${s.title}</div>
-            <div class="genre"><strong>Жанр:</strong> ${s.genre}</div>
             <div class="rating"><strong>Рейтинг:</strong> ${s.rating}</div>
             <div class="description">${s.description}</div>
           </div>
@@ -254,19 +166,13 @@
     }
 
     searchInput.addEventListener("input", () => {
-      const activeGenreBtn = document.querySelector(".filters button.active");
-      const genre = activeGenreBtn && activeGenreBtn.textContent !== "Показать все"
-        ? activeGenreBtn.textContent
-        : null;
-      const baseList = genre
-        ? serials.filter(s => s.genre.includes(genre))
-        : serials;
-      renderSerials(baseList);
+      renderSerials(serials);
     });
 
     function showRandomSerial() {
+      if (serials.length === 0) return;
       const random = serials[Math.floor(Math.random() * serials.length)];
-      alert(`🎬 ${random.title}\n\nЖанр: ${random.genre}\nРейтинг: ${random.rating}\n\n${random.description}`);
+      alert(`🎬 ${random.title}\n\nРейтинг: ${random.rating}\n\n${random.description}`);
     }
 
     function applyTheme(theme) {
@@ -287,10 +193,7 @@
       applyTheme(current);
     });
 
-    const uniqueGenres = getUniqueGenres(serials);
-    renderFilters(uniqueGenres);
-    renderSerials(serials);
-
+    fetchSerials();
     const savedTheme = localStorage.getItem("theme") || "light";
     applyTheme(savedTheme);
   </script>
